	  code. New functions real_dir_from_tide(), append_slash_if_dir(),
	  username_tab_completion is more than a stub now =-).
	- New options --enable-extra.  New code in nano.c:version() to 
	  print out various options from ./configure, function do_credits().
	- Ignore key sequence 543 & 545, right control and alt keys in
	  windows. Affects main() and winio.c:nanogetstr().
- files.c:
  write_file()
	- Unsetting modified on temp files bug fixed (Rocco Corsi).
  do_insertfile()
	- Added call to real_name_from tilde, oops.
  read_file()
	- Added check for fileptr == NULL.
- global.c:
  shortcut_init()
	- Now takes an argument as to whether to display the unjustify
	  shortcut or the normal uncut text one.  Needed to accomodate
	  the klugey unjustify code.
- nano.1, nano.1.html:
	- Updated date on pages because of -p changes.
- nano.c:
  do_justify()
	- Wrote unjustify code.  Borrows cutbuffer and stores the unjustified 
	  text there, then grabs the next keystroke and, if the unjustify
	  key, gets rid of the justified text and calls do_uncut_text.
	  Added macro NANO_UNJUSTIFY_KEY.
  do_int_spell*
	- Various fixes (Rocco Corsi).
	- Changed abort of program to aborting based on value of "edit a
	  replacement" question, and not caring about the replace loop
	  return value.  That way the user can get out of the replace loop
	  and continue spell checking (very important to me anyway).
- search.c:
  do_replace_hilight()
	- New function, displays the currently selected word as hilighted
	  in the spell check.  Called from do_replace_loop (Rocco Corsi).
	- Added calls to curs_set(0) and (1) to diable the cursor when
	  hilighting, looks much better.
- es.po: 
	- Traditional Spanish strings updates.

nano 0.9.21 - 11/23/2000
- AUTHORS
	- Added Rocco Corsi.
- nano.c:
  main()
	- Changed check for argc == 1 to argv[optind] == NULL to decide
	  whether or not to display "New File" in the statusbar.
- search.c:
  findnextstr()